# dynamixel-controller

./: CMakeLists.txt  DynamixelIO.cpp  DynamixelIO.h  DynamixelMotor.cpp  NOTICE.md  README.md  docs.md  dynamixel_controller.py  dynio.h  example.json  main.cpp  setup.py
DynamixelJSON/: AX12.json  MX106.json  MX28.json
DynamixelSDK/src/: DynamixelSDK.h
dynamixel_controller/DynamixelJSON/: MX106_Protocol_1.json  MX_Protocol_2.json
dynio/: __init__.py  dynamixel_controller.py
dynio/DynamixelJSON/: AX12_Protocol_1.json  MX106.json  MX12.json  MX12_28_Protocol_1.json  MX28.json  MX64.json  MX64_Protocol_1.json  XM540W270.json  __init__.py
